[gd_scene load_steps=4 format=2]

[ext_resource path="res://test_collision_mouse.gd" type="Script" id=1]
[ext_resource path="res://ring_import.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 500, 0.2, 500 )

[node name="test_collision_mouse" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.30227, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="ring_import" parent="." instance=ExtResource( 2 )]

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
